--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=42", "wheel", "httpx>=0.20.0", "pandas>=1.0.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "rquote"
 version = "0.2.4"
