--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rquote"
-version = "0.2.4"
+version = "0.2.5"
 description = "Mostly day quotes of cn/hk/us/fund/future markets, side with quote list fetch"
 readme = "README.md"
-requires-python = ">=3.4"
+requires-python = ">=3.6.1"
 dependencies = [
     "httpx>=0.20.0",
     "pandas>=1.0.0",
+    "setuptools>=59.6.0",
+    "twine>=3.8.0",
 ]
