--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rquote"
-version = "0.3.1"
+version = "0.3.2"
 description = "Mostly day quotes of cn/hk/us/fund/future markets, side with quote list fetch"
 readme = "README.md"
 requires-python = ">=3.6.1"
 dependencies = [
+    "build>=0.9.0",
     "httpx>=0.20.0",
     "pandas>=1.0.0",
     "setuptools>=42",
